# peak-music

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  server.rs
backend/src/routes/: mod.rs  playlist.rs
backend/systemd/: peak-music.service
infrastructure/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/src/: build.ts
infrastructure/src/stacks/: main.ts
scripts/: deploy-backend.sh  restart-backend.sh
