[package]
name = "peakmusic"
version = "0.1.0"
authors = ["monkslc <monkslc@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["full"] }
warp = "0.3.2"

[dev-dependencies]
tokio-tungstenite = "0.15.0"
reqwest = "0.11.6"
