[package]
name = "peakmusic"
version = "0.1.0"
authors = ["monkslc <monkslc@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13.0", features = ["full"] }
warp = "0.3.2"

[dev-dependencies]
reqwest = "0.11.6"
tokio-tungstenite = "0.15.0"
